--- a/style.css
+++ b/style.css
@@ -1,7 +1,48 @@
-@font-face {
+/* @font-face {
     font-family: player-iconfont;
     src: url("//cytroncdn.videojj.com/asserts/iconfont/iva2-iconfont.eot");
     src: url("//cytroncdn.videojj.com/asserts/iconfont/iva2-iconfont.eot?#iefix") format("embedded-opentype"), url("//cytroncdn.videojj.com/asserts/iconfont/iva2-iconfont.woff") format("woff"), url("//cytroncdn.videojj.com/asserts/iconfont/iva2-iconfont.ttf") format("truetype"), url("//cytroncdn.videojj.com/asserts/iconfont/iva2-iconfont.svg#iconfont") format("svg")
+} */
+@font-face {font-family: "iconfont";
+    src: url('fonts/iconfont.eot'); /* IE9*/
+    src: url('fonts/iconfont.eot#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('fonts/iconfont.woff') format('woff'), /* chrome, firefox */
+    url('fonts/iconfont.ttf') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+    url('fonts/iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */
+}
+
+.player_control_iconfont {
+    font-family:"iconfont" !important;
+    font-size:28px;
+    font-style:normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0.2px;
+    -moz-osx-font-smoothing: grayscale;
+    color: #fff;
+    line-height: 30px;
+    text-align: center;
+    position: relative;
+}
+.player_control_iconfont:after {
+    content: " ";
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 30px;
+    height: 30px;
+    background: radial-gradient(30% 30%, hsla(0, 0%, 100%, .6), hsla(0, 0%, 100%, 0));
+    border-radius: 50%;
+    opacity: 0;
+    /*box-shadow: 0 0 6px hsla(0, 0%, 100%, .4);*/
+    transition: opacity .4s ease-in-out
+}
+.player_control_iconfont_volumn:after{
+    background: radial-gradient(30% 30%, rgba(9,209,177,.6), rgba(0,0,0,0));
+}
+
+ .player_control_iconfont:hover:after {
+    opacity: 1
 }
 #container {
     position: relative;background: #000; z-index: 0;overflow: hidden;font-size:0;
@@ -12,7 +53,7 @@
     height: 100%;
     background: #000;
 }
-.player_control_iconfont {
+/* .player_control_iconfont {
     font-family: player-iconfont!important;
     font-size: 20px;
     font-style: normal;
@@ -22,7 +63,7 @@
     text-align: center;
     line-height: 30px;
     color: #fff
-}
+} */
 
 .player_control {
     position: absolute;
@@ -52,7 +93,7 @@
     float: left;
     width: 30px;
     height: 30px;
-    margin: 5px 11px;
+    margin: 5px 10px;
     cursor: pointer
 }
 .player_control_hover_time {
@@ -60,23 +101,6 @@
     width: auto;
     line-height: 20px;
     text-align: center
-}
-
-.player_control_iconfont:after {
-    content: " ";
-    position: absolute;
-    margin: 5px -20px;
-    width: 20px;
-    height: 20px;
-    background: radial-gradient(50% 50%, hsla(0, 0%, 100%, .65), hsla(0, 0%, 100%, .2));
-    border-radius: 50%;
-    opacity: 0;
-    box-shadow: 0 0 13px hsla(0, 0%, 100%, .4);
-    transition: opacity .4s ease-in-out
-}
-
- .player_control_iconfont:hover:after {
-    opacity: 1
 }
 
  .player_control_progress {
@@ -208,7 +232,7 @@
     float: right;
     width: 30px;
     height: 30px;
-    margin: 5px 0;
+    margin: 5px 10px;
     cursor: pointer
 }
 
@@ -263,7 +287,7 @@
 .video_volumn_head{
     position:absolute;
     top: -13px;
-    left: -24px;
+    left: -35px;
     color: #09d1b1;
 }
 .video_volumn_total{
